--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: java
 
-before_install:
+jdk:
+  - oraclejdk8
+  -
+script:
   - mvn org.apache.maven.plugins:maven-help-plugin:3.1.0:evaluate -Dexpression=project.version -q -DforceStdout
+  - echo ${project.version}
