--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,13 @@ language: java
 jdk:
   - oraclejdk8
 
-after_success:
-  - PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-  - echo $PROJECT_VERSION
-  - docker build -t test --build-arg JAR_FILE=test-$PROJECT_VERSION.jar .
+deploy:
+  - provider: script
+    script: bash deploy_openshift.sh
+    on:
+      branch: master
+
+before_install:
+  - curl -L https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz > oc-cli.tar.gz
+  - tar -xzf oc-cli.tar.gz
+  - sudo mv ./openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit/oc /usr/local/bin
