--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,16 @@ language: java
 jdk:
   - oraclejdk8
 
+
+before_deploy:
+  if ! [[ $TRAVIS_BRANCH = DOC-142-peter-deployment ]]; then
+    - curl -L https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz > oc-cli.tar.gz
+    - tar -xzf oc-cli.tar.gz
+    - sudo mv ./openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit/oc /usr/local/bin
+  fi
+
 deploy:
   - provider: script
     script: bash deploy_openshift.sh
     on:
       branch: master
-
-before_install:
-  - curl -L https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz > oc-cli.tar.gz
-  - tar -xzf oc-cli.tar.gz
-  - sudo mv ./openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit/oc /usr/local/bin
