determining right path

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ deploy:
   provider: pages
   edge: true
   skip_cleanup: true
-  guthub_token: 4ee2b0b1d351a123aa957d060172e854163b85e2
+  guthub_token: $GITHUB_TOKEN
   keep_history: true
   local_dir: $HOME/javadoc
   on:
