--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ services:
 
 before_deploy:
   - mvn clean javadoc:aggregate -P javadoc
-#  - mv target/site/apidocs target/site/javadocs/latest
+  - mv target/site/apidocs target/site/javadocs
   - ls -lR
 #  - .travis/push-javadoc-to-gh-pages.sh
 
@@ -35,3 +35,4 @@ deploy:
   upload-dir: javadocs
   on:
     branch: master
+    jdk: openjdk8
