--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,6 @@ before_deploy:
 #    jdk: openjdk8
 deploy:
   - provider: script
-    script: bash .push-javadoc-to-gh-pages.sh
+    script: bash .travis/.push-javadoc-to-gh-pages.sh
     on:
       tags: true
