--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ sudo: required
 services:
   - docker
 
+branches:
+  except:
+    - gh-pages
+
 #before_deploy:
 #    - curl -L https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz > oc-cli.tar.gz
 #    - tar -xzf oc-cli.tar.gz
@@ -37,6 +41,7 @@ before_deploy:
 #    jdk: openjdk8
 deploy:
   - provider: script
+    skip_cleanup: true
     script: bash .travis/.push-javadoc-to-gh-pages.sh
-    on:
-      tags: true
+#    on:
+#      tags: true
