determining right path

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,6 @@ before_deploy:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: bash .travis/.push-javadoc-to-gh-pages.sh
+    script: bash .travis/push-javadoc-to-gh-pages.sh
 #    on:
 #      tags: true
